--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -1,47 +1,16 @@
 {
-  "name": "@koopjs/output-geoservices",
+  "name": "output-geoservices",
   "version": "7.1.0",
-  "description": "Wraps FeatureServer as a Koop output plugin",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest",
-    "test:cov": "jest --coverage && npm run cov:badge",
-    "cov:badge": "coverage-badges --output ./coverage.svg"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/koopjs/koop.git"
   },
   "keywords": [
-    "koop",
     "featureserver",
     "plugin",
     "output",
     "geoservices"
   ],
-  "author": "Daniel Fenton <dfenton@esri.com>",
   "license": "Apache-2.0",
-  "files": [
-    "src/**/*.js",
-    "index.d.ts",
-    "!**/*.spec.js"
-  ],
-  "bugs": {
-    "url": "https://github.com/koopjs/koop/issues"
-  },
-  "homepage": "https://github.com/koopjs/koop#readme",
   "dependencies": {
-    "@koopjs/featureserver": "8.1.0",
-    "@koopjs/logger": "5.0.0"
-  },
-  "devDependencies": {
-    "jest-coverage-badges": "^1.1.2"
-  },
-  "jest": {
-    "coverageReporters": [
-      "json",
-      "text",
-      "lcov"
-    ]
   }
 }
