--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -1,33 +1,13 @@
 {
-  "name": "@koopjs/featureserver",
+  "name": "featureserver",
   "version": "8.1.0",
   "description": "*An open source implementation of the GeoServices specification*",
   "main": "src/index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "mocha '**/*.spec.js' --recursive -t 5000",
-    "test:cov": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge && npm run test:cov:unit",
-    "test:cov:unit": "nyc -r=json-summary --report-dir=coverage_unit --temp-dir=.nyc_output_unit mocha 'src/**/*.spec.js' && npm run cov:badge:unit",
-    "test:cov:unit:loc": "nyc -r=html --report-dir=coverage_unit --temp-dir=.nyc_output_unit mocha 'src/**/*.spec.js' && npm run cov:badge:unit",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
-    "cov:badge:unit": "coverage-badges-cli  --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg"
   },
-  "contributors": [
-    {
-      "name": "Daniel Fenton"
-    },
-    {
-      "name": "Rich Gwozdz",
-      "email": "rgwozdz@esri.com"
-    }
-  ],
   "license": "Apache-2.0",
   "dependencies": {
     "@esri/proj-codes": "^3.1.0",
-    "@koopjs/logger": "5.0.0",
-    "@koopjs/winnow": "4.1.0",
     "@terraformer/spatial": "^2.0.7",
     "chroma-js": "^2.0.0",
     "esri-extent": "^1.1.1",
@@ -37,33 +17,10 @@
     "lodash": "^4.17.21",
     "wkt-parser": "^1.3.3"
   },
-  "devDependencies": {
-    "express": "^4.14.0",
-    "mocha": "^10.0.0",
-    "nyc": "^15.1.0",
-    "proxyquire": "^2.1.3",
-    "should": "^13.0.0",
-    "should-sinon": "0.0.6",
-    "sinon": "^15.0.0",
-    "supertest": "^6.3.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/koopjs/FeatureServer.git"
-  },
   "keywords": [
     "featureserver",
     "geoservices",
     "geojson",
     "sql"
-  ],
-  "files": [
-    "src/**/*.js",
-    "index.d.ts",
-    "!**/*.spec.js"
-  ],
-  "bugs": {
-    "url": "https://github.com/koopjs/koop/issues"
-  },
-  "homepage": "https://github.com/koopjs/koop#readme"
+  ]
 }
