--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -1,27 +1,8 @@
 {
-  "name": "@koopjs/koop-core",
+  "name": "core",
   "description": "Serve, transform, and query geospatial data on the web",
   "version": "9.2.0",
-  "contributors": [
-    {
-      "name": "Rich Gwozdz",
-      "email": "rgwozdz@esri.com"
-    },
-    {
-      "name": "Haoliang Yu",
-      "email": "hyu@esri.com"
-    },
-    {
-      "name": "Daniel Fenton"
-    },
-    {
-      "name": "Chris Helm"
-    }
-  ],
   "dependencies": {
-    "@koopjs/cache-memory": "5.0.0",
-    "@koopjs/logger": "5.0.0",
-    "@koopjs/output-geoservices": "7.1.0",
     "@sindresorhus/fnv1a": "^2.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -33,42 +14,17 @@
     "joi": "^17.6.3",
     "lodash": "^4.17.15"
   },
-  "devDependencies": {
-    "mocha": "^10.0.0",
-    "proxyquire": "^2.1.3",
-    "should": "^13.2.3",
-    "should-sinon": "0.0.6",
-    "sinon": "^15.0.0",
-    "supertest": "^6.3.1"
-  },
-  "files": [
-    "src/**/*.js",
-    "index.d.ts",
-    "!**/*.spec.js"
-  ],
-  "bugs": {
-    "url": "https://github.com/koopjs/koop/issues"
-  },
-  "homepage": "https://github.com/koopjs/koop#readme",
   "keywords": [
     "etl",
     "feature",
     "featureService",
     "geojson",
     "geospatial",
-    "koop",
     "service",
     "spatial"
   ],
   "license": "Apache-2.0",
   "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/koopjs/koop-core.git"
-  },
   "scripts": {
-    "test": "mocha '**/*.spec.js' ",
-    "test:cov": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg"
   }
 }
