--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -1,24 +1,9 @@
 {
-  "name": "@koopjs/winnow",
+  "name": "winnow",
   "version": "4.1.0",
   "description": "Apply sql-like filters to GeoJSON",
   "main": "src/index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "tape '**/*.spec.js' | tap-spec",
-    "test:cov": "nyc -r=json-summary tape '**/*.spec.js' | tap-spec && npm run cov:badge && npm run test:cov:unit",
-    "test:cov:unit": "nyc -r=json-summary --report-dir=coverage_unit --temp-dir=.nyc_output_unit tape 'src/**/*.spec.js' | tap-spec && npm run cov:badge:unit",
-    "test:cov:unit:loc": "nyc -r=html --report-dir=coverage_unit --temp-dir=.nyc_output_unit tape 'src/**/*.spec.js' | tap-spec && npm run cov:badge:unit",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
-    "cov:badge:unit": "coverage-badges-cli --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg",
-    "benchmark": "node benchmark/index.js",
-    "benchmark:ci": "node benchmark/index.js | tee benchmark-result.txt"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/koopjs/winnow.git"
   },
   "keywords": [
     "geojson",
