--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -32,8 +32,7 @@
   "homepage": "https://github.com/koopjs/koop#readme",
   "dependencies": {
     "@koopjs/featureserver": "8.0.0",
-    "@koopjs/logger": "5.0.0",
-    "lodash": "^4.17.21"
+    "@koopjs/logger": "5.0.0"
   },
   "devDependencies": {
     "jest-coverage-badges": "^1.1.2"
