--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "precommit": "lint-staged && npm test --workspaces",
     "test:e2e": "SUPPRESS_NO_CONFIG_WARNING=true DATA_DIR=./test/provider-data jest ./test/*.spec.js",
     "demo": "node demo/index.js",
-    "clean-fork-unit-tests": "shx find ./packages -name '*.spec.js' -delete",
+    "clean-fork-unit-tests": "shx find ./packages -name '*.spec.js' -delete"
   },
   "license": "Apache-2.0",
   "workspaces": [
