--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -26,5 +26,7 @@
   "license": "Apache-2.0",
   "main": "src/index.js",
   "scripts": {
+    "clean": "shx rm -rf ../../customdata/framework/featureserver && shx rm package-lock.json",
+    "build": "shx mkdir ../../customdata/framework/featureserver && shx cp package.json ../../customdata/framework/featureserver && shx cp -r ./src ../../customdata/framework/featureserver && shx cp -r ./node_modules ../../customdata/framework/featureserver"  
   }
 }
