chore: tweak ci trigger

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -9,6 +9,7 @@ on:
       - next
       - beta
     paths:
+      - "./.github/**.yml"
       - "**/packages/**.js"
       - "**/packages/**/package.json"
 
