--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,30 +1,37 @@
 version: 2
 updates:
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/packages/cache-memory"
   schedule:
     interval: "weekly" 
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/packages/featureserver"
   schedule:
     interval: "weekly"
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/packages/koop-core"
   schedule:
     interval: "weekly"
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/packages/logger"
   schedule:
     interval: "weekly"
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/packages/output-geoservices"
   schedule:
     interval: "weekly"
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/packages/winnow"
   schedule:
     interval: "weekly"
 - package-ecosystem: "npm"
+  target-branch: "next"
   directory: "/"
   schedule:
     interval: "weekly"
