--- a/.github/workflows/next-to-master-pr.yml
+++ b/.github/workflows/next-to-master-pr.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - next
 jobs:
-  productionPromotion:
+  nextToMaster:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,4 +17,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: next-merge
+          branch: next-to-master
+          title: Merge "next" into master
+          body: |
+            The "next" branch accumulates changes (dependency updates or other PRs) that will go into the next Koop release.  Merging this PR will trigger a new Koop release so long as at least one changeset file is present.
