--- a/package.json
+++ b/package.json
@@ -42,29 +42,30 @@
     "packages/core"
   ],
   "devDependencies": {
-    "@babel/eslint-parser": "^7.11.0",
-    "@changesets/changelog-git": "^0.1.13",
-    "@changesets/cli": "^2.25.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@babel/eslint-parser": "^7.22.10",
+    "@changesets/changelog-git": "^0.1.14",
+    "@changesets/cli": "^2.26.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "@koopjs/auth-direct-file": "^2.0.2",
     "@koopjs/provider-file-geojson": "^2.2.0",
     "await-spawn": "^4.0.2",
     "byline": "^5.0.0",
-    "commitizen": "^4.2.5",
-    "commitlint": "^17.2.0",
-    "coverage-badges-cli": "^1.0.12",
+    "commitizen": "^4.3.0",
+    "commitlint": "^17.7.1",
+    "coverage-badges-cli": "^1.1.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "cz-git": "^1.3.12",
-    "eslint": "^8.23.1",
-    "husky": "^8.0.1",
-    "jest": "^29.5.0",
-    "lerna": "^7.0.0",
+    "cz-git": "^1.7.1",
+    "eslint": "^8.47.0",
+    "husky": "^8.0.3",
+    "jest": "^29.6.3",
+    "jest-coverage-badges-ng": "^1.0.1",
+    "lerna": "^7.1.5",
     "lerna-changelog": "^2.2.0",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^14.0.1",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.0",
-    "supertest": "^6.3.0"
+    "prettier": "^3.0.2",
+    "supertest": "^6.3.3"
   },
   "config": {
     "commitizen": {
