--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "lerna-changelog": "^2.2.0",
     "lint-staged": "^14.0.1",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.2",
-    "supertest": "^6.3.3"
+    "prettier": "^3.0.0",
+    "snyk": "^1.1206.0",
+    "supertest": "^6.3.0"
   },
   "config": {
     "commitizen": {
