--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,5 +1,8 @@
 name: Dependabot auto-approve/merge
-on: pull_request_target
+on:
+  pull_request:
+    branches:
+      - 'dependabot/**'
 
 permissions:
   contents: write
