--- a/.github/workflows/synk-code-check.yml
+++ b/.github/workflows/synk-code-check.yml
@@ -1,11 +1,17 @@
-name: Example workflow for Node using Snyk
-on: push
+name: Snyk Code Check
+on:
+  pull_request:
+    branches: [ "master", "next" ]
+    paths:
+      - "**/packages/**.js"
+  schedule:
+    - cron: '35 13 * * 6'
 jobs:
   security:
     permissions:
-      actions: read
-      contents: read
-      security-events: write
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
