--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/koopjs/koop#readme",
   "dependencies": {
     "@esri/proj-codes": "^3.1.0",
+    "@koopjs/logger": "5.0.0",
     "@terraformer/arcgis": "^2.1.1",
     "@terraformer/spatial": "^2.1.2",
     "@turf/bbox-polygon": "^6.5.0",
