--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -12,6 +12,6 @@ jobs:
       with:
         url: 'https://api.github.com/repos/rgwozdz/koop/dispatches'
         method: 'POST'
-        bearerToken: ${{ secrets.GITHUB_TOKEN }}
+        bearerToken: ${{ secrets.FORK_TOKEN }}
         customHeaders: '{"Accept": "application/vnd.github+json", "X-GitHub-Api-Version": "2022-11-28"}'
         data: '{"event_type":"on-demand-test","client_payload":{"foo": "bar"}}'
