chore: remove dependabot

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,8 @@
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch"],
-      "automerge": true
+      "automerge": true,
+      "matchFileNames": ["**/package.json"]
     }
   ]
 }
