--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,44 +1,128 @@
 version: 2
 updates:
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/packages/cache-memory"
-  schedule:
-    interval: "weekly" 
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/packages/featureserver"
-  schedule:
-    interval: "weekly"
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/packages/koop-core"
-  schedule:
-    interval: "weekly"
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/packages/logger"
-  schedule:
-    interval: "weekly"
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/packages/output-geoservices"
-  schedule:
-    interval: "weekly"
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/packages/winnow"
-  schedule:
-    interval: "weekly"
-- package-ecosystem: "npm"
-  target-branch: "next"
-  versioning-strategy: "increase"
-  directory: "/"
-  schedule:
-    interval: "weekly"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/packages/cache-memory"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/packages/featureserver"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/packages/core"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/packages/logger"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/packages/output-geoservices"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/packages/winnow"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
+  - package-ecosystem: "npm"
+    target-branch: "next"
+    versioning-strategy: "increase"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+        update-types:
+            - "minor"
+            - "patch"
+      development-dependencies:
+        dependency-type: "development"
+        update-types:
+            - "minor"
+            - "patch"
+    rebase-strategy: "auto"
