--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,8 +1,8 @@
 name: Dependabot PRs
 on:
-  push:
+  pull_request:
     branches:
-      - 'dependabot/**'
+      - 'next'
 
 permissions:
   contents: write
@@ -46,7 +46,7 @@ jobs:
         node-version: [18.x]
         os: [ubuntu-latest]
 
-    if: ${{ !contains(github.event.pull_request.labels.*.name, 'skip') }}
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'major') || github.actor == 'dependabot[bot]' }}
     steps:
       - name: Approve dependabot PR
         run: gh pr review --approve "$PR_URL"
