--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -2,7 +2,7 @@ name: Merge dependabot PRs for minor/patch updates
 on:
   pull_request:
     branches:
-      - 'next'
+      - master
 
 permissions:
   contents: write
@@ -18,6 +18,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    if: ${{ github.actor == 'dependabot[bot]' && (contains(github.event.pull_request.labels.*.name, 'minor') || contains(github.event.pull_request.labels.*.name, 'patch') ) }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -46,7 +47,7 @@ jobs:
         node-version: [18.x]
         os: [ubuntu-latest]
 
-    if: ${{ !contains(github.event.pull_request.labels.*.name, 'major') && github.actor == 'dependabot[bot]' }}
+    if: ${{ github.actor == 'dependabot[bot]' && (contains(github.event.pull_request.labels.*.name, 'minor') || contains(github.event.pull_request.labels.*.name, 'patch') ) }}
     steps:
       - name: Approve dependabot PR
         run: gh pr review --approve "$PR_URL"
