--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "tape src/**/*.spec.js | tap-spec",
     "test:cov": "nyc -r=json-summary tape './src/**/*.spec.js' | tap-spec && npm run cov:badge",
+    "test:cov:unit": "nyc -r=json-summary tape './src/**/*.spec.js' | tap-spec && npm run cov:badge",
     "cov:badge": "coverage-badges-cli --output ./coverage.svg"
   },
   "repository": {
