--- a/.github/workflows/synk-code-check.yml
+++ b/.github/workflows/synk-code-check.yml
@@ -23,7 +23,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: code test
-          args: --sarif-file-output=snyk-code.sarif
+          args: --sarif-file-output=snyk-code.sarif --all-projects
       
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
