chore: fire CI tests when e2e tests or helpers modified

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -11,6 +11,7 @@ on:
       - "./.github/**.yml"
       - "**/packages/**.js"
       - "**/packages/**/package.json"
+      - "test/**/*.js"
 
 jobs:
   pr-tests:
